--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,7 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
-
+    uploads_directory: '%kernel.root_dir%/web/uploads'
 framework:
     #esi: ~
     #translator: { fallbacks: ['%locale%'] }
@@ -65,3 +65,8 @@ swiftmailer:
     password: '%mailer_password%'
     spool: { type: memory }
 
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\"" 
+        options:    []
