--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/orm": "^2.4.8",
         "incenteev/composer-parameter-handler": "~2.0",
+        "ircmaxell/password-compat": "~1.0",
+        "knplabs/knp-snappy-bundle": "^1.4",
         "oyejorge/less.php": "v1.7.0.14",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
